K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec: #for pods
  replicas: 1 #Kubernetes will ensure that 1 container replica is running
  selector: # this seleects the template with matching app name
    matchLabels:
      app: commandservice
  template: # defining info about pods
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: kumarpiyush21/commandsservice:latest
---
# Cluster IP service config
apiVersion: v1
kind: Service
metadata: 
  # Also used as domain like localhost in PlatformService-appsettings.Production.json
  name: commands-clusterip-srv 
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
